# Django-Remote-Model

./: .gitignore  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
django_remote_model/: get_model.py
django_remote_model/provider/: provider_fields_generator.py  provider_serializer.py  provider_view_set.py
django_remote_model/remote_model/: __init__.py  get_model.py  queryset.py
dynamic_admin_model/: get_model.py
dynamic_admin_model/provider/: provider_view_set.py
dynamic_remote_model/: get_model.py
dynamic_remote_model/provider/: provider_serializer.py
